# mechanica

./: README.md  pyproject.toml
mechanica/: __init__.py  __main__.py  config.py  keyboard_handler.py  packs.py
tests/: test_mechanicalkeyboard.py
testsoundpack/: keys.json
