[tool.poetry]
name = "mechanica"
version = "0.1.0"
description = ""
authors = ["ramazanemreosmanoglu <ramazanemre@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"
click = "^8.1.3"
pydub = "^0.25.1"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
